deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-pod
spec:
  selector:
    matchLabels:
      app: gunicorn-flask
      version: one
  replicas: 3
  template:
    metadata:
      labels:
        app: gunicorn-flask
        version: one
    spec:
      containers:
      - name: hello-app-1
        image: "giuliohome/gcp-flask-sqlserver-k8s:latest"
