service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-gunicorn-service
spec:
  type: NodePort
  selector:
    app: gunicorn-flask
    version: one
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  

# kubectl apply -f service.yaml
